Newest at the top
YYYY-MM-DD HR:MIN - comment

Lab 10 - Changelog
2016-03-31 14:23 - Added reference to the xsl files in timeslots and days.xml
2016-03-31 14:16 - Updated days and timeslots.xml because those files were out of date
2016-03-31 14:05 - Turned template into timeslots.xsl and days.xsl
2016-03-31 13:54 - Started up template for xsl
2016-03-31 13:34 - Changelog for Lab 10 created

Lab 09 - Changelog
2016-03-28 18:44 - Server-side validation methods are created and it also passed
2016-03-28 17:54 - Local Validation passed
2016-03-28 17:45 - Changed each booking to be a table instead each row being a table
2016-03-28 17:12 - Finished the timeslots facet 
2016-03-28 16:19 - Changed according to the validation error (regex for both room and courseCode)
2016-03-28 14:10 - Created courses facet schema
2016-03-27 14:00 - Added min and max time restriction in the schema
2016-03-27 13:52 - Changed the reg-ex for course code
2016-03-27 13:48 - Changed weekday names to full weekday names and changed master to timetable.xml
2016-03-24 17:27 - Created days facet and updated master.xml
2016-03-24 15:04 - Instructor element added
2016-03-24 14:52 - data type for person is created
2016-03-24 14:51 - Added the room types to schema definition
2016-03-24 14:21 - Started some data types
2016-03-24 14:07 - Initial setup