@@ -36,14 +36,51 @@ Format of timeslots.xml
 		</timeslot>
 		<timeslot start="09:30">
 			<booking>
+				<day weekday="Tuesday"></day>
+				<courseCode>4620</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-306</room>
+				<instructor>Bethany Edmunds</instructor>
+			</booking>
+			<booking>
 				<day weekday="Thursday"></day>
 				<courseCode>4910</courseCode>
 				<courseType>Lec</courseType>
 				<room>SW1-1205</room>
 				<instructor>Richard Chau</instructor>
 			</booking>
+			<booking>
+				<day weekday="Friday"></day>
+				<courseCode>4660</courseCode>
+				<courseType>Lec</courseType>
+				<room>SW9-206</room>
+				<instructor>Steve Fabiszewski</instructor>
+			</booking>
 		</timeslot>
 		<timeslot start="10:30">
+			<booking>
+				<day weekday="Monday"></day>
+				<courseCode>4650</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-306</room>
+				<instructor>Medhat Elmasry</instructor>
+			</booking>
+			<booking>
+				<day weekday="Tuesday"></day>
+				<courseCode>4910</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-306</room>
+				<instructor>Richard Chau</instructor>
+			</booking>
+			<booking>
+				<day weekday="Friday"></day>
+				<courseCode>4770</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-306</room>
+				<instructor>Trevor Lord</instructor>
+			</booking>
+		</timeslot>
+		<timeslot start="11:30">
 			<booking>
 				<day weekday="Monday"></day>
 				<courseCode>4650</courseCode>
@@ -98,6 +135,22 @@ Format of timeslots.xml
 				<instructor>Steve Fabiszewski</instructor>
 			</booking>
 		</timeslot>
+		<timeslot start="14:30">
+			<booking>
+				<day weekday="Thursday"></day>
+				<courseCode>4850</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-308</room>
+				<instructor>James Parry</instructor>
+			</booking>
+			<booking>
+				<day weekday="Friday"></day>
+				<courseCode>4660</courseCode>
+				<courseType>Lab</courseType>
+				<room>SE12-206</room>
+				<instructor>Steve Fabiszewski</instructor>
+			</booking>
+		</timeslot>
 		<timeslot start="15:30">
 			<booking>
 				<day weekday="Monday"></day>
@@ -105,6 +158,13 @@ Format of timeslots.xml
 				<courseType>Lec</courseType>
 				<room>SW1-2005</room>
 				<instructor>Richard Chau</instructor>
+			</booking>
+			<booking>
+				<day weekday="Tuesday"></day>
+				<courseCode>4620</courseCode>
+				<courseType>Lec</courseType>
+				<room>SW1-2020</room>
+				<instructor>Bethany Edmunds</instructor>
 			</booking>
 		</timeslot>
 		<timeslot start="16:30">
@@ -114,15 +174,6 @@ Format of timeslots.xml
 				<courseType>Lec</courseType>
 				<room>SE6-205</room>
 				<instructor>Medhat Elmasry</instructor>
-			</booking>
-		</timeslot>
-		<timeslot start="15:30">
-			<booking>
-				<day weekday="Tuesday"></day>
-				<courseCode>4620</courseCode>
-				<courseType>Lec</courseType>
-				<room>SW1-2020</room>
-				<instructor>Bethany Edmunds</instructor>
 			</booking>
 		</timeslot>
 	</timeslots>
