@@ -16,18 +16,89 @@
 				<title>Timetable XSL</title>
 			</head>
 			<body>
-				<h2>Timeslots centric data</h2>
-				<xsl:call-template name="days"/>
-				<xsl:call-template name="timeslots"/>
+				<h2>Timeslots Centric Data</h2>
+				<table>
+					<xsl:call-template name="headings"/>
+					<xsl:apply-templates select="timetable/timeslots/timeslot"/>
+				</table>
 			</body>
 		</html>
-	</xsl:template>
-	<xsl:template name="timeslots">
-		
+	</xsl:template> 
+	
+	<xsl:template name="headings">
+		<thead>
+			<tr>
+				<th>Start Time</th>
+				<th>Monday</th>
+				<th>Tuesday</th>
+				<th>Wednesday</th>
+				<th>Thursday</th>
+				<th>Friday</th>
+			</tr>
+		</thead>
 	</xsl:template>
 	
-	<xsl:template name="days">
-		
+	<xsl:template match="timeslot">
+		<tr>
+			<td>
+				<xsl:value-of select="./@start"/>
+			</td>
+			<td>
+				<xsl:if test="booking/day/@weekday='Monday'">
+					<xsl:value-of select="booking/courseCode"/> 
+					<br/>
+					<xsl:value-of select="booking/courseType"/> 
+					<br/>
+					<xsl:value-of select="booking/room"/> 
+					<br/>
+					<xsl:value-of select="booking/instructor"/>
+				</xsl:if>
+			</td>
+			<td>
+				<xsl:if test="booking/day/@weekday='Tuesday'">
+					<xsl:value-of select="booking/courseCode"/> 
+					<br/>
+					<xsl:value-of select="booking/courseType"/> 
+					<br/>
+					<xsl:value-of select="booking/room"/> 
+					<br/>
+					<xsl:value-of select="booking/instructor"/>
+				</xsl:if>
+			</td>
+			<td>
+				<xsl:if test="booking/day/@weekday='Wednesday'">
+					<xsl:value-of select="booking/courseCode"/> 
+					<br/>
+					<xsl:value-of select="booking/courseType"/> 
+					<br/>
+					<xsl:value-of select="booking/room"/> 
+					<br/>
+					<xsl:value-of select="booking/instructor"/>
+				</xsl:if>
+			</td>
+			<td>
+				<xsl:if test="booking/day/@weekday='Thursday'">
+					<xsl:value-of select="booking/courseCode"/> 
+					<br/>
+					<xsl:value-of select="booking/courseType"/> 
+					<br/>
+					<xsl:value-of select="booking/room"/> 
+					<br/>
+					<xsl:value-of select="booking/instructor"/>
+				</xsl:if>
+			</td>
+			<td>
+				<xsl:if test="booking/day/@weekday='Friday'">
+					<xsl:value-of select="booking/courseCode"/> 
+					<br/>
+					<xsl:value-of select="booking/courseType"/> 
+					<br/>
+					<xsl:value-of select="booking/room"/> 
+					<br/>
+					<xsl:value-of select="booking/instructor"/>
+				</xsl:if>
+			</td>
+		</tr>
 	</xsl:template>
 	
 </xsl:stylesheet>
