@@ -2,6 +2,7 @@ Newest at the top
 YYYY-MM-DD HR:MIN - comment
 
 Lab 10 - Changelog
+2016-03-31 17:12 - Data displaying in all existing timeslots, but with duplicates
 2016-03-31 14:23 - Added reference to the xsl files in timeslots and days.xml
 2016-03-31 14:16 - Updated days and timeslots.xml because those files were out of date
 2016-03-31 14:05 - Turned template into timeslots.xsl and days.xsl
